welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T=new Array[Color](getMondeHauteur())
	for (i <- 1 to getMondeHauteur()){
		T(i-1) = getCouleurSol();
		avance();
	}
	for (k <- 1 to 5) {
		avance();
		gauche();
		avance();
		droite();
		for (j <- 1 to getMondeHauteur()) {
			setCouleurBrosse(T(i-1));
			baisseBrosse();
			leveBrosse();
			avance();
		}
	}
}
